Forked the "AngularJS-Routing" repository (from Ben Nadel) and modified it to make ik fully work with a snapshot release of "angular-nested-views" (and for the moment with 1.2.0 RC2 of AngularJS; to make sure that it will still be woirking in the future 1.2 version of AngularJS).

--- a/assets/app/views/layouts/standard.htm
+++ b/assets/app/views/layouts/standard.htm
@@ -18,10 +18,10 @@
 				<li>
 					<a href="#/home">Home</a>
 				</li>
-				<li ng-class="{ on: ( subview == 'pets' ) }">
+				<li ng-class="{ on: ( currentAction().indexOf('standard.pets') == 0 ) }">
 					<a href="#/pets">Pets</a>
 				</li>
-				<li ng-class="{ on: ( subview == 'contact' ) }">
+				<li ng-class="{ on: ( currentAction() == 'standard.contact' ) }">
 					<a href="#/contact">Contact</a>
 				</li>
 			</ul>
@@ -31,7 +31,7 @@
 
 
 		<!-- Include Body Content. -->
-		<div ng-switch="subview" class="l-body">
+		<div ng-switch="nextSubAction()" class="l-body">
 			<div ng-switch-when="contact" ng-include=" 'assets/app/views/contact/index.htm' "></div>
 			<div ng-switch-when="home" ng-include=" 'assets/app/views/home/index.htm' "></div>
 			<div ng-switch-when="pets" ng-include=" 'assets/app/views/pets/index.htm' "></div>
