--- a/assets/app/views/pets/index.htm
+++ b/assets/app/views/pets/index.htm
@@ -3,7 +3,7 @@
 
 
 	<!-- Include View Content. -->
-	<div ng-switch="subview">
+	<div ng-switch="nextSubAction()">
 		<div ng-switch-when="categories" ng-include=" 'assets/app/views/pets/categories.htm' "></div>
 		<div ng-switch-when="detail" ng-include=" 'assets/app/views/pets/detail/index.htm' "></div>
 		<div ng-switch-when="list" ng-include=" 'assets/app/views/pets/list.htm' "></div>
