--- a/assets/app/views/layouts/splash.htm
+++ b/assets/app/views/layouts/splash.htm
@@ -20,7 +20,7 @@
 
 
 		<!-- Include Body Content. -->
-		<div ng-switch="subview" class="l-body">
+		<div ng-switch="nextSubAction()" class="l-body">
 			<div ng-switch-when="home" ng-include=" 'assets/app/views/home/index.htm' "></div>
 		</div>
 
